# rust-learning

./: Cargo.toml
src/: main.rs
src/cross_country_game/: main.rs
src/crypto_coin_flipper/: main.rs
src/guess_the_number/: main.rs
src/http_server/: main.rs
src/mood_checker/: main.rs
src/pomodoro_timer/: main.rs
src/prime_number_checker/: main.rs
src/simple_reminder/: main.rs
src/tasks_cli/: main.rs
