[package]
name = "rust-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
colored = "2.0.4"
hyper = { version = "0.14.10", features = ["full"] }
notify = "6.1.1"
rand = "0.8.5"
serde = {version = "1.0.190",freatures = ["derive"]}
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
warp = "0.3.6"
